--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    font-family: 'Poppins', sans-serif;
+}
 .navbar {
     display: flex;
     align-items: center;
@@ -32,4 +35,38 @@ p{
     margin: auto;
     padding-left: 25px;
     padding-right: 25px;
+}
+.row {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around
+}
+.col-2 {
+    min-width: 300px;
+    flex-basis: 50%;
+}
+.col-2 img{
+    max-width: 100%;
+    padding: 50px 0;
+}
+.col-2 h1 {
+    font-size: 50px;
+    line-height: 60px;
+    margin: 25px 0;
+}
+.btn {
+    display: inline-block;
+    background-color: #ff523b;
+    color: #fff;
+    padding: 8px 30px;
+    margin: 30px 0;
+    border-radius: 30px;
+    transition: background 0.5s;
+}
+.btn:hover {
+ background: #563434 ;
+}
+.header{
+    background: radial-gradient(#fff, #ffd6d6);
 }
