added more products and comments

--- a/style.css
+++ b/style.css
@@ -130,3 +130,62 @@ h4 {
 .col-4:hover {
     transform: translateY(-5px);
 }
+.offer {
+    background: radial-gradient(#fff, #ffd6d6);
+    margin-top: 80px;
+    padding: 30px 0;
+}
+.col-2 .offer-img {
+    padding: 50px;
+}
+small {
+    color: #555;
+}
+.testimonial {
+    padding-top: 100px;
+}
+.testimonial .col-3 {
+    text-align: center;
+    padding: 40px 20px;
+    box-shadow: 0 0 20px 0 rgba(0,0,0,0.1);
+    cursor: pointer;
+    transition: transform 0.5s;
+
+}
+.testimonial .col-3:hover {
+    transform: translateY(-10px)
+}
+.testimonial .col-3 img {
+    width: 50px;
+    margin-top: 20px;
+    border-radius: 50%;
+}
+.fa.fa-quote-left {
+    font-size: 34px;
+    color:#ff523b;
+
+}
+.col-3 p{
+    font-size: 12px;
+    color: #777;
+    margin: 12px 0;
+}
+.testimonial .col-3 h3{
+    font-weight: 600;
+    color: #777;
+    font-size: 16px;
+}
+.brands {
+    margin: 100px auto;
+}
+.col-5 {
+    width: 160px;
+}
+.col-5 img {
+    width: 100%;
+    cursor: pointer;
+    filter: grayscale(100%);
+}
+.col-5 img:hover{
+    filter: grayscale(0);
+}
